# shadertoy

./: Cargo.toml  README.md
src/: composition.rs  error.rs  io.rs  lib.rs  programs.rs  shadertoy.rs  target.rs  value.rs
src/presets/: blackwhite.frag  blackwhite.vert  drop_shadow.frag  gaussian_blur.frag
